# cggtts

./: .gitignore  Cargo.toml  README.md
.github/workflows/: daily.yml  release.yml  rust.yml
cggtts/: Cargo.toml  README.md
cggtts-cli/: Cargo.toml  README.md
cggtts/src/: lib.rs
src/: errors.rs  lib.rs
src/header/: delay.rs  formatting.rs  mod.rs  parsing.rs  reference_time.rs  version.rs
src/scheduler/: calendar.rs  period.rs
src/scheduling/: mod.rs  scheduler.rs
src/tests/: parser.rs  toolkit.rs
src/track/: formatting.rs
src/track_fit/: fit.rs  mod.rs
src/tracker/: :  fit.rs  fitted.rs  mod.rs
