[package]
name = "cggtts"
version = "4.3.0"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "CGGTTS data parsing and synthesis"
homepage = "https://github.com/rtk-rs"
repository = "https://github.com/rtk-rs/cggtts"
keywords = ["geo", "gnss", "timing", "gps"]
categories = ["science", "science", "parsing"]
edition = "2018"
readme = "README.md"
exclude = [
    "data/*",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[features]
default = [] # no features by default

# Unlock common view period definitions and scheduling
scheduler = []

# Satellite tracker and fit method
tracker = [
    "dep:polyfit-rs",
    "dep:log",
]

[dependencies]
thiserror = "2"
scan_fmt = "0.1.3"
strum = "0.27"
itertools = "0.14"
strum_macros = "0.27"
flate2 = { version = "1", optional = true }
log = { version = "0.4", optional = true }
polyfit-rs = { version = "0.2", optional = true }
gnss-rs = { version = "2.4.0", features = ["serde"] }
hifitime = { version = "4.1.0", features = ["serde", "std"] }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
rand = "0.8"
